# delivery-isv

./: .env.example  .gitignore  .gitleaks.toml  CLAUDE.md  README.md  docker-compose.yml
backend/: .env.example  CLAUDE.md  README.md  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 11aa25d907f3_create_addon_groups_and_addons_tables.py  248dec4751ff_create_stores_table.py  2e0d02f42dab_add_users_and_otp_codes_tables.py  57aa2a205690_create_cities_table.py  5bef01ffe1ab_create_categories_table.py  64f6e6cef194_add_user_id_fk_to_customers.py  661195884f97_add_status_to_product_variation.py  6ebc0349ab8c_create_customers_table.py  90b06a960788_add_display_order_menu_section_featured.py  9235020fd72d_create_order_items_table.py  96cedd3fafb7_create_products_table.py  9a74dcc91e93_create_store_opening_hours_table.py  9fc0a1ebd6ab_create_order_item_addons_table.py  b964b10e6672_add_store_extension_fields.py  c19dc1358909_create_product_addon_groups_junction_.py  cd2dbc905b1a_seed_initial_store_categories.py  ce147e4e4268_create_orders_table.py  d1797ce9df3e_create_addresses_table.py  d9a8d7e19f52_rename_product_variations_status_.py  e16e2e9ee921_create_order_status_logs_table.py  f13cab7f836a_create_product_variations_table.py  ffd2034a50bd_seed_mg_cities.py
backend/app/: main.py
backend/app/api/: deps.py  errors.py  health.py
backend/app/core/: config.py  rate_limit.py
backend/app/db/: base.py  identifiers.py  mixins.py  session.py  types.py
backend/app/domain/: __init__.py  enums.py
backend/tests/: conftest.py  test_health.py
(+88 files in other folders)
